--- a/games.yaml
+++ b/games.yaml
@@ -1794,8 +1794,7 @@
 - name: unnethack
   url: https://sourceforge.net/projects/unnethack/
   info: |
-    is a first game in this roundup is UnNetHack,
-    a fork of NetHack, originally based on the hugely popular
+    is a fork of NetHack, originally based on the hugely popular
     roguelike game NetHack.
   screencast: https://asciinema.org/a/485489
 
