Revert "small typo in readme/games.yaml"
This reverts commit 4c9d565d6d4dd844e67e9bbd96732aa57d5e0f33.

--- a/games.yaml
+++ b/games.yaml
@@ -1794,7 +1794,8 @@
 - name: unnethack
   url: https://sourceforge.net/projects/unnethack/
   info: |
-    is a fork of NetHack, originally based on the hugely popular
+    is a first game in this roundup is UnNetHack,
+    a fork of NetHack, originally based on the hugely popular
     roguelike game NetHack.
   screencast: https://asciinema.org/a/485489
 
